updated project from urlshortener project

--- a/url_Shortend/views/index.html
+++ b/url_Shortend/views/index.html
@@ -1,80 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-<div class="container">
-  <h1> URL Shortner</h1>
-  <form  id="shorten-form">
-   <div>
-    <label for ="url">Enter URL:</label>
-    <input type="url" id="url" name="url" required placeholder="Enter URL">
-    
-   </div>
-    <div class="sortCode">
-    <label for ="shortcode">Short Code:</label>
-    <input type="text" id="shortcode" name="shortcode" required >
-    
-   </div>
-   <button class="btn" type="submit">Shorten</button>
-
-  </form>
-
-
-  <h2>Shortened URL</h2>
-
-  <ul id ="shortened-urls"></ul>
-</div>
-
-</div>
-
-<script>
- document.getElementById('shorten-form').addEventListener('submit',async(event)=>{
-    event.preventDefault();
-
-   const formData= new FormData(event.target);
-
-const url= formData.get('url');
-const shortCode= formData.get('shortCode');
-console.log(url,shortCode);
-
-
-try {
-const response = await fetch("/shorten",{
-  method:"POST",  
- headers:{
-   'Content-Type': 'application/json'
- },
- body: JSON.stringify({url,shortCode})
-});
-
-if(response.ok){
-  alert("URL shortened successfully");
-}else{
-  const errorMessage=await response.text();
-  alert(errorMessage);
-}
-
-  
-} catch (error) {
-  console.log(error);
-  
-}
-
-  })
-
-</script>
-
-
-  
-</body>
-</html> -->
-
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -87,7 +10,7 @@ if(response.ok){
 <body>
   <div class="container">
     <h1>URL Shortener</h1>
-    <form id="shorten-form">
+    <form action="/" method="POST">
       <div>
         <label for="url">Enter URL:</label>
         <input type="url" id="url" name="url" required placeholder="Enter URL">
@@ -100,10 +23,12 @@ if(response.ok){
     </form>
 
     <h2>Shortened URL</h2>
-    <ul id="shortened-urls"></ul>
+    <ul>
+      {{shortened_urls}}
+    </ul>
   </div>
 
-  <script>
+  <!-- <script>
 
 const fetchShortendURL=async()=>{
  const response =await fetch("/links");
@@ -144,7 +69,7 @@ const fetchShortendURL=async()=>{
         });
 
         if (response.ok) {
-          fetchShortenedURL();
+          fetchShortendURL();
           const result = await response.json();
           alert("URL shortened successfully!");
           event.target.reset(); // Reset form
@@ -173,12 +98,6 @@ const fetchShortendURL=async()=>{
 
 
 fetchShortendURL();
-
-
-
-
-
-
-  </script>
+  </script> -->
 </body>
 </html>
